--- a/src/main/resources/com/conmuaxadan/rhythm/view/rhythm-view.fxml
+++ b/src/main/resources/com/conmuaxadan/rhythm/view/rhythm-view.fxml
@@ -3,10 +3,9 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.Slider?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.image.Image?>
@@ -64,10 +63,10 @@
                   <HBox alignment="CENTER" prefHeight="42.0" prefWidth="750.0">
                      <children>
                         <Label fx:id="lbCurrentTime" prefHeight="17.0" prefWidth="50.0" text="00:00" textFill="WHITE" />
-                        <StackPane prefHeight="10.0" prefWidth="510.0">
+                        <StackPane prefHeight="20.0" prefWidth="510.0">
                            <children>
-                              <ProgressBar fx:id="progress" prefHeight="15.0" prefWidth="500.0" progress="0.0" />
-                              <Slider id="sliderProgress" fx:id="sliderProgress" onMousePressed="#mousePressedSliderProgress" prefHeight="15.0" prefWidth="510.0" />
+                              <ProgressBar fx:id="progress" prefHeight="12.0" prefWidth="500.0" progress="0.0" stylesheets="@../css/style.css" />
+                              <Slider id="sliderProgress" fx:id="sliderProgress" onMousePressed="#mousePressedSliderProgress" prefHeight="20.0" prefWidth="510.0" />
                            </children>
                         </StackPane>
                         <Label fx:id="lbEndTime" alignment="CENTER_RIGHT" prefHeight="17.0" prefWidth="50.0" text="00:00" textFill="#fffdfd" />
@@ -203,14 +202,7 @@
                         </StackPane>
                      </children>
                   </HBox>
-                  <TableView prefHeight="314.0" prefWidth="565.0" stylesheets="@../css/style.css">
-                    <columns>
-                      <TableColumn prefWidth="39.0" text="STT" />
-                      <TableColumn prefWidth="64.0" text="btn" />
-                        <TableColumn prefWidth="396.0" text="Name" />
-                        <TableColumn prefWidth="75.0" text="Menu" />
-                    </columns>
-                  </TableView>
+                  <ListView fx:id="listview" prefHeight="290.0" prefWidth="565.0" stylesheets="@../css/style.css" />
                </children>
                <BorderPane.margin>
                   <Insets bottom="15.0" right="15.0" top="15.0" />
